# ergocub-software

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml
app/: CMakeLists.txt
app/ctpService/: ctpService.xml
app/ergoCubEmotions/: CMakeLists.txt
app/ergoCubEmotions/conf/: config.ini
app/ergoCubStartup/: ergoCubStartupV0.xml
app/realsense/: realsense.xml
src/modules/couplingXCubHandMk5/: CMakeLists.txt  CouplingXCubHandMk5.cpp  CouplingXCubHandMk5.h  CouplingXCubHandMk5_ParamsParser.cpp  CouplingXCubHandMk5_ParamsParser.h  CouplingXCubHandMk5_params.md  README.md  YarpDevReturnValueCompat.h
src/modules/emotionHandler/: CMakeLists.txt  emotionHandler.cpp  emotionHandler.h  main.cpp
src/modules/emotionHandler/images/: neu.png:Zone.Identifier  sad.png:Zone.Identifier
src/modules/ergoCubEmotions/: CMakeLists.txt  README.md  config.ini  emotionHandler.xml  ergoCubEmotions.cpp  ergoCubEmotions.h  ergoCubEmotions.xml  idl.thrift  main.cpp  test.sh
src/modules/handMk5CouplingHandler/: CMakeLists.txt  HandMk5CouplingHandler.cpp  HandMk5CouplingHandler.h
tests/: CMakeLists.txt  ergocub-model-test.cpp
urdf/: CMakeLists.txt  feet_fixed_model.sdf.in  fixed_model.sdf.in  model.config.in
urdf/creo2urdf/data/common/: ERGOCUB_joint_all_parameters.csv  ERGOCUB_joint_all_parameters_1_3.csv  ERGOCUB_joint_all_parameters_SN000.csv  ERGOCUB_joint_all_parameters_SN001.csv  ERGOCUB_joint_all_parameters_SN003.csv  gazebo_addon.yaml  minContacts_addon.yaml
urdf/creo2urdf/data/ergocub1_0/: ERGOCUB_all_options.yaml  ERGOCUB_all_options_gazebo.yaml  ERGOCUB_all_options_minContacts.yaml  ERGOCUB_joint_all_parameters.csv  README.md  base_1_0.yaml
urdf/creo2urdf/data/ergocub1_1/: ERGOCUB_all_options.yaml  ERGOCUB_all_options_gazebo.yaml  ERGOCUB_all_options_minContacts.yaml  ERGOCUB_joint_all_parameters.csv  README.md  base_1_1.yaml  model.config
urdf/creo2urdf/data/ergocub1_2/: ERGOCUB_all_options.yaml  ERGOCUB_all_options_gazebo.yaml  ERGOCUB_all_options_minContacts.yaml  README.md  base_1_2.yaml  model.config
urdf/creo2urdf/data/ergocub1_3/: ERGOCUB_all_options.yaml  ERGOCUB_all_options_gazebo.yaml  ERGOCUB_all_options_minContacts.yaml  README.md  base_1_3.yaml
urdf/creo2urdf/data/ergocubSN000/: ERGOCUB_all_options.yaml  ERGOCUB_all_options_gazebo.yaml  ERGOCUB_all_options_minContacts.yaml  README.md  base_SN000.yaml  model.config
urdf/creo2urdf/data/ergocubSN001/: ERGOCUB_all_options.yaml  ERGOCUB_all_options_gazebo.yaml  ERGOCUB_all_options_minContacts.yaml  README.md  base_SN001.yaml
urdf/creo2urdf/data/ergocubSN002/: ERGOCUB_all_options.yaml  ERGOCUB_all_options_gazebo.yaml  ERGOCUB_all_options_minContacts.yaml  README.md
urdf/creo2urdf/data/ergocubSN003/: ERGOCUB_all_options.yaml  ERGOCUB_all_options_gazebo.yaml  ERGOCUB_all_options_minContacts.yaml  README.md  base_SN003.yaml  model.config
urdf/ergoCub/: ecub_yarprobotinterface.ini  package.xml
urdf/ergoCub/conf/: ergocub.xml  ergocub_coupling.xml  ergocub_coupling_gz_sim.xml  ergocub_coupling_ros2.xml  ergocub_coupling_yarp.xml  ergocub_gz_sim.xml  ergocub_ros2.xml  gazebo_ergocub_depth_camera.ini  gazebo_ergocub_head.ini  gazebo_ergocub_l_arm_ft_sensor_inertial.ini  gazebo_ergocub_l_foot_front_ft_sensor_inertial.ini  gazebo_ergocub_l_foot_rear_ft_sensor_inertial.ini  gazebo_ergocub_l_leg_ft_sensor_inertial.ini  gazebo_ergocub_left_arm.ini  gazebo_ergocub_left_arm_no_forearm.ini  gazebo_ergocub_left_arm_wrist_mk2_0.ini  gazebo_ergocub_left_arm_wrist_mk2_1.ini  gazebo_ergocub_left_hand.ini  gazebo_ergocub_left_hand_finger.ini  gazebo_ergocub_left_hand_mk5_0.ini  gazebo_ergocub_left_hand_mk5_1.ini  gazebo_ergocub_left_hand_mk5_2.ini  gazebo_ergocub_left_hand_mk5_3.ini  gazebo_ergocub_left_leg.ini  gazebo_ergocub_r_arm_ft_sensor_inertial.ini  gazebo_ergocub_r_foot_front_ft_sensor_inertial.ini  gazebo_ergocub_r_foot_rear_ft_sensor_inertial.ini  gazebo_ergocub_r_leg_ft_sensor_inertial.ini  gazebo_ergocub_realsense_inertial.ini  gazebo_ergocub_right_arm.ini  gazebo_ergocub_right_arm_wrist_mk2_0..ini  gazebo_ergocub_right_arm_wrist_mk2_1.ini  gazebo_ergocub_right_hand.ini  gazebo_ergocub_right_hand_finger.ini  gazebo_ergocub_right_hand_index.ini  gazebo_ergocub_right_hand_middle.ini  gazebo_ergocub_right_hand_mk5_0.ini  gazebo_ergocub_right_hand_mk5_1.ini  gazebo_ergocub_right_hand_mk5_2.ini  gazebo_ergocub_right_leg.ini  (+4 more)
urdf/ergoCub/conf/FT/: gazebo_ergocub_left_arm_ft.ini  gazebo_ergocub_left_foot_front_ft.ini  gazebo_ergocub_left_foot_rear_ft.ini  gazebo_ergocub_left_leg_ft.ini  gazebo_ergocub_right_arm_ft.ini  gazebo_ergocub_right_foot_front_ft.ini  gazebo_ergocub_right_foot_rear_ft.ini  gazebo_ergocub_right_leg_ft.ini
urdf/ergoCub/conf/estimators/: wbd_ecub_sim.xml
urdf/ergoCub/conf/sensors/: gazebo_ergocub_lidar.ini  gazebo_ergocub_rgbd_camera.ini  gz_sim_ergocub_rgbd_camera.ini  lidar_wrapper_ros2.xml  rgbd_camera_wrapper_ros2.xml
urdf/ergoCub/meshes/simmechanics/: sim_ecub_1-0_l_hand_index_2_prt.stl  sim_ecub_1-0_l_hand_index_3_prt.stl  sim_ecub_1-0_l_hand_middle_1_prt.stl  sim_ecub_1-0_l_hand_palm_prt.stl  sim_ecub_1-0_l_hand_pinkie_1_prt.stl  sim_ecub_1-0_l_hand_pinkie_2_prt.stl  sim_ecub_1-0_l_hand_ring_1_prt.stl  sim_ecub_1-0_l_hand_thumb_1_prt.stl  sim_ecub_1-0_l_wrist_1_prt.stl  sim_ecub_1-0_r_forearm_prt.stl  sim_ecub_1-0_r_hand_index_1_prt.stl  sim_ecub_1-0_r_hand_index_2_prt.stl  sim_ecub_1-0_r_hand_middle_1_prt.stl  sim_ecub_1-0_r_hand_pinkie_2_prt.stl  sim_ecub_1-0_r_hand_thumb_1_prt.stl  sim_ecub_1-0_r_hand_thumb_3_prt.stl  sim_ecub_1-0_r_wrist_2_prt.stl  sim_ecub_1-1_chest.stl  sim_ecub_1-1_head.stl  sim_ecub_1-1_head_neck_2.stl  sim_ecub_1-1_head_neck_3.stl  sim_ecub_1-1_l_ankle_1.stl  sim_ecub_1-1_l_ankle_2.stl  sim_ecub_1-1_l_foot_front.stl  sim_ecub_1-1_l_foot_rear.stl  sim_ecub_1-1_l_forearm.obj.mtl  sim_ecub_1-1_l_forearm.stl  sim_ecub_1-1_l_hand_index_1.stl  sim_ecub_1-1_l_hand_index_2.stl  (+147 more)
urdf/ergoCub/robots/: ergoCubGazeboV1_0  ergoCubGazeboV1_0_minContacts  ergoCubGazeboV1_3
urdf/simmechanics/: CMakeLists.txt
(+388 files in other folders)
