# Copyright (C) 2006-2022 Istituto Italiano di Tecnologia (IIT)
# All rights reserved.
#
# This software may be modified and distributed under the terms of the
# BSD-3-Clause license. See the accompanying LICENSE file for details.

if( ERGOCUB_MODEL_GENERATE_SIMMECHANICS )
  add_subdirectory(simmechanics)
endif()